[package]
name = "spine2d-bevy"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Bevy integration backend for the spine2d runtime"
readme = "../README.md"

[dependencies]
bevy = "0.19.0"
spine2d = { path = "../spine2d", version = "0.4.0", features = ["json", "binary"] }
anyhow = "1.0"

[dev-dependencies]
bevy_egui = "0.40.0"
serde = { workspace = true }
serde_json = { workspace = true }
